revert: fix(index): fix spacing in each post on the index page
This reverts commit 53d38a8. Specifically, the portion which lessened the
spacing between title and date in each list item.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -186,7 +186,6 @@
 .post-link {
     display: block;
     font-size: 24px;
-    height: $spacing-unit / 1.2;
 }
 
 
